# django-celery-outbox

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  stale.yml  tests.yml
django_celery_outbox/: __init__.py  admin.py  admin_tests.py  app.py  app_tests.py  apps.py  factories.py  integration_tests.py  metrics.py  metrics_tests.py  models.py  models_tests.py  relay.py  relay_tests.py  serialization.py  serialization_tests.py  signals.py  signals_tests.py  statsd.py  statsd_tests.py  structlog_utils.py  structlog_utils_tests.py
django_celery_outbox/management/commands/: celery_outbox_relay.py  celery_outbox_relay_tests.py
django_celery_outbox/migrations/: 0001_initial.py
django_celery_outbox/templates/admin/django_celery_outbox/celeryoutbox/: change_list.html
tests/: settings.py
